2014-06-02  Sergio Martin <sergio.martin@artica.es>

	* include/styles/pandora.css: Change the zindex of autohidden
	menu and shortcut bar to be shown over the gis map for ticket #855

2014-06-02  Sergio Martin <sergio.martin@artica.es>

	* godmode/menu.php: Fixed database interface ACLs for DM flag
	for ticket #849

2014-06-02  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/snmpconsole/snmp_view.php: restored the lost code from
	the branch 5.
	
	Incident: #845

2014-06-02  Miguel de Dios <miguel.dedios@artica.es>
	
	* general/news_dialog.php: fixed the empty list of news in the first
	login.

2014-06-02  Miguel de Dios <miguel.dedios@artica.es>
	
	* pandoradb_data.sql: fixed the insertion data of tnews, the lost
	columns.

2014-06-01  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_edit_modules.php: Improved to support
	'FF interval' and 'FF timeout'.

2014-05-31  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/configurar_agente.php,
	godmode/agentes/module_manager_editor.php,
	godmode/agentes/module_manager_editor_common.php,
	pandoradb.sql, pandoradb.oracle.sql, pandoradb.postgreSQL.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.mysql.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.oracle.sql,
	extras/pandoradb_migrate_5.0.x_to_5.1.postgreSQL.sql: Improved
	'FF threshold' to be able to define timeout.

2014-05-30  Miguel de Dios <miguel.dedios@artica.es>
	
	* operation/events/sound_events.php: fixed the break image.
	
	Incident: #844

2014-05-30  Miguel de Dios <miguel.dedios@artica.es>
	
	* extensions/files_repo/files_repo_list.php: fixed PHP warnings.
	
	Incident: #847

2014-05-30  Sergio Martin <sergio.martin@artica.es>

	* godmode/servers/recon_script.php: Improve layout of recon scripts
	lists for ticket #822

2014-05-30  Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/reporting/visual_console_builder.editor.js,
	include/functions_visual_map_editor.php: fixed the palette tool for
	item group.
	
	Incident: #838
