@@ -70,6 +70,9 @@ function visual_map_main() {
 			}
 		}
 	});
+	
+	//Resize the view to adapt the screen size.
+	$("#frame_view").height($("#main").height() - 75);
 }
 
 function cancel_button_palette_callback() {
